# camera-opencv-ffmpeg-rtmp-stream

./: CMakeLists.txt
src/: rtmp-stream.cpp
